# Copyright (c) 2024 Institute of Software, Chinese Academy of Sciences .

import("//build/config/clang/clang.gni")
import("//build/ohos.gni")
import("//build/ohos/kernel/kernel.gni")
import("//device/qemu/common/virt_full/device.gni")

kernel_build_script_dir = "//device/qemu/common/virt_full/kernel"
kernel_source_dir = "//kernel/linux/linux-6.6"
kernel_modules_dir = "$root_build_dir/kernel_modules"
kernel_module_outputs = [
  "$kernel_modules_dir/rtw89_core.ko",
  "$kernel_modules_dir/rtw89_pci.ko",
  "$kernel_modules_dir/rtw89_8852a.ko",
  "$kernel_modules_dir/rtw89_8852ae.ko",
  "$kernel_modules_dir/mt7601u.ko",
  "$kernel_modules_dir/mac80211_hwsim.ko",
  "$kernel_modules_dir/virt_wifi.ko",
  "$kernel_modules_dir/libarc4.ko",
  "$kernel_modules_dir/mac80211.ko",
  "$kernel_modules_dir/cfg80211.ko",
  "$kernel_modules_dir/iwlwifi.ko",
  "$kernel_modules_dir/iwlmvm.ko",
]

kernel_image = ""
if (target_cpu == "arm") {
  kernel_image = "zImage"
} else if (target_cpu == "arm64") {
  kernel_image = "Image"
} else if (target_cpu == "riscv64") {
  kernel_image = "Image"
} else if (target_cpu == "x86_64") {
  kernel_image = "bzImage"
}

action("build_kernel") {
  script = "build_kernel.sh"
  sources = [ kernel_source_dir ]
  outputs = [ "$root_build_dir/packages/phone/images/$kernel_image" ]
  outputs += kernel_module_outputs
  args = [
      rebase_path(kernel_build_script_dir,root_build_dir),
      rebase_path("$root_build_dir/../.."),
      rebase_path("$root_build_dir/packages/phone/images"),
      rebase_path(kernel_source_dir),
      rebase_path(kernel_build_script_dir),
      target_cpu,
      rebase_path(kernel_modules_dir, root_build_dir),
  ]  
}

ohos_prebuilt_etc("rtw89_core") {
  source = "$kernel_modules_dir/rtw89_core.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("rtw89_pci") {
  source = "$kernel_modules_dir/rtw89_pci.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("rtw89_8852a") {
  source = "$kernel_modules_dir/rtw89_8852a.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("rtw89_8852ae") {
  source = "$kernel_modules_dir/rtw89_8852ae.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("mt7601u") {
  source = "$kernel_modules_dir/mt7601u.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("mac80211_hwsim") {
  source = "$kernel_modules_dir/mac80211_hwsim.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("virt_wifi") {
  source = "$kernel_modules_dir/virt_wifi.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("libarc4") {
  source = "$kernel_modules_dir/libarc4.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("mac80211") {
  source = "$kernel_modules_dir/mac80211.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("cfg80211") {
  source = "$kernel_modules_dir/cfg80211.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("iwlwifi") {
  source = "$kernel_modules_dir/iwlwifi.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

ohos_prebuilt_etc("iwlmvm") {
  source = "$kernel_modules_dir/iwlmvm.ko"
  install_images = [ vendor_base_dir ]
  module_install_dir = "modules"
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
  deps = [ ":build_kernel" ]
}

group("virt_ko") {
  deps = [
    ":rtw89_core",
    ":rtw89_pci",
    ":rtw89_8852a",
    ":rtw89_8852ae",
    ":mt7601u",
    ":mac80211_hwsim",
    ":virt_wifi",
    ":libarc4",
    ":mac80211",
    ":cfg80211",
    ":iwlwifi",
    ":iwlmvm",
  ]
}
