# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
virt_subsystem_name = "device_arm64_virt"

updater_ueventd_cfg = "//base/startup/init/services/etc/ueventd.cfg"

ohos_prebuilt_etc("updater_ueventd.cfg") {
  source = "${updater_ueventd_cfg}"
  install_images = [ "updater" ]
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
}

ohos_prebuilt_etc("updater_init.cfg") {
  source = "config/init.cfg"
  install_images = [ "updater" ]
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
}

ohos_prebuilt_etc("updater_init_virt_usb.cfg") {
  source = "config/init.virt.usb.cfg"
  install_images = [ "updater" ]
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
}

ohos_prebuilt_etc("signing_cert.crt") {
  source = "config/signing_cert.crt"
  module_install_dir = "etc/certificate"
  install_images = [
    "system",
    "updater",
  ]
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
}

ohos_prebuilt_etc("fstab.updater") {
  source = "config/fstab.updater"
  install_images = [ "updater" ]
  subsystem_name = virt_subsystem_name
  part_name = "qemu_virt_full"
}

group("updater_files") {
  deps = [
    ":fstab.updater",
    ":signing_cert.crt",
    ":updater_init.cfg",
    ":updater_init_virt_usb.cfg",
    ":updater_ueventd.cfg",
  ]
}
