# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

static_library("board") {
  sources = [
    "fs/fs_init.c",
    "fs/hal_littlefs.c",
    "fs/hal_vfs.c",
    "fs/littlefs_hal.c",
    "hals/driver/hal_watchdog.c",
    "hals/utils/file/hal_file.c",
    "libc/dprintf.c",
    "libc/swap.c",
    "main.c",
  ]
  if (!defined(LOSCFG_TEST)) {
    # kernel's testsuites not enabled, use ower's
    sources += [ "test/task_demo.c" ]
  }
  if (defined(LOSCFG_FS_FAT)) {
    sources += [ "fs/ff_gen_drv.c" ]
  }
  include_dirs = [
    "include",
    "hals/driver",
    "test",
    "//utils/native/lite/include",
  ]
}

config("public") {
  include_dirs = [
    ".",
    "fs",
  ]
  ldflags = [
    "-Wl,-T" + rebase_path("ESP32.ld"),
    "-nostdlib",
  ]
  libs = [ "gcc" ]
}
