# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//drivers/adapter/khdf/liteos_m/hdf.gni")

static_library("display_layer") {
  output_name = "display_layer"
  sources = [
    "//drivers/peripheral/display/hal/disp_hal.c",
    "display_layer.c",
  ]
  include_dirs = [
    "../../driver",
    "../../driver/video",
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
  ]
  deps = [
    "$khdf_path/core:hdf_core",
    "$khdf_path/osal:hdf_osal_lite",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  defines = [ "__USER__" ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

static_library("display_gralloc") {
  output_name = "display_gralloc"
  sources = [ "display_gralloc.c" ]
  include_dirs = [
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
  ]

  deps = [
    "$khdf_path/core:hdf_core",
    "$khdf_path/osal:hdf_osal_lite",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

static_library("display_gfx") {
  output_name = "display_gfx"
  sources = [ "display_gfx.c" ]
  include_dirs = [
    "//drivers/peripheral/base",
    "//drivers/peripheral/display/hal",
    "//drivers/peripheral/display/interfaces/include",
  ]

  deps = [
    "$khdf_path/core:hdf_core",
    "$khdf_path/osal:hdf_osal_lite",
    "//third_party/bounds_checking_function:libsec_static",
  ]
  cflags = [
    "-Wall",
    "-Wextra",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

lite_component("hdi_display") {
  features = [
    ":display_layer",
    ":display_gralloc",
    ":display_gfx",
  ]
}
