# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

module_name = get_path_info(rebase_path("."), "name")
build_ext_component(module_name) {
  exec_path = rebase_path(".")

  fs_src_path = product_path + "/fs_data/data"

  # lfs img size 32M
  fs_image_size = 33554432

  # lfs img size 128*1024*2
  block_size = 262144

  # lfs img blocks = fs_size/block_size
  blocks = 128

  command = "./mklittlefs -c ${fs_src_path} -d 5 -b ${block_size} -p ${blocks} -s ${fs_image_size} ${product_path}/fs-storage.img"
}
